uodate code decreasing erros